# hydra

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  SYSTEM.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
alembic/: env.py
data/: accounts_import.csv  accounts_import_batch2.csv  hydra.db-shm  hydra.db-wal  search_keywords.json  warmup_comments.json
deploy/: com.hydra.worker.plist  hydra-auto-pull.service  hydra-auto-pull.timer  hydra-backup.service  hydra-backup.timer  hydra-deploy.service  hydra-server-staging.service  nginx-hydra-staging.conf  nginx-hydra.conf
docs/: HANDOFF.md  HYDRA-V2-FINAL-SPEC.md  HYDRA_MASTER.md  NIGHT_BUILD_LOG.md  PHASE_GATES.md  ROADMAP.md  SCHEDULING_RULES.md  TODO-SERVICE-COMPLETION.md  VERIFICATION.md  WORKER_ADMIN_AGENT_TASK_0_0.md  WORKER_DISPATCH_PROPOSAL.md  e2e-checklist.md  staging-setup.md  vps-setup.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
hydra/: __main__.py  main.py
onboarding/: __init__.py  goals.py  login_fsm.py  report.py  selectors.py  session.py  verifier.py
redesign/: CLAUDE.md  PR-1-terminology.md  PR-2-pipeline-dashboard.md  PR-3-niche-model.md  PR-4-niche-tabs.md  PR-5-video-timeline.md  PR-6-tags-campaigns.md  PR-7-onboarding.md  PR-8-hydra-v2.md  PR-8a-spec-sidebar.md  PR-8b-spec-feed-alert-queue.md  PR-8c-spec-brand-target.md  PR-8d-spec-preset-library.md  PR-8e-spec-comment-tree.md  PR-8f-spec-video-score.md  PR-8g-spec-tracking-limits.md  PR-8h-spec-data-model.md  README.md
scripts/: add_channel_plan.py  assign_personas_all.py  assign_personas_inline.py  backfill_target_comment_id.py  backup.sh  backup_db.sh  backup_hourly.sh  batch_onboard.py  bootstrap-prod.sh  build_and_deploy_frontend.sh  bump_version.py  check_alembic_sync.py  cleanup_screenshots.sh  click_account_dropdown.py  click_dialog_button.py  click_my_account.py  create_admin.py  debug_login_29.py  deploy.sh  diag_adspower_api_probe.py  diag_adspower_profiles.py  diag_dns_http.py  e2e_check.sh  generate_personas_inline.py  generate_search_pool.py  generate_worker_token.py  import_orders.py  m2_1_loop_check.sh  manual_youtube_step_runner.py  migrate_identity_challenge.py  migrate_sqlite_to_pg.py  minimal_adspower_youtube_comment.py  otp_finish.py  otp_step_click.py  preload_adspower_browsers.py  recover_accounts_stage0.py  register_otp.py  rescue_kill_worker.py  (+14 more)
(+653 files in other folders)
