[project]
name = "hydra"
version = "0.1.0"
description = "YouTube comment marketing automation"
requires-python = ">=3.11"

dependencies = [
    # Browser
    "playwright>=1.40",

    # YouTube
    "google-api-python-client>=2.100",
    "youtube-transcript-api>=0.6",

    # AI
    "anthropic>=0.30",

    # 2FA
    "pyotp>=2.9",

    # CAPTCHA
    "2captcha-python>=1.2",

    # DB
    "sqlalchemy>=2.0",

    # HTTP
    "httpx>=0.27",

    # Web UI
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",  # CSV upload

    # Telegram
    "python-telegram-bot>=21.0",

    # Config
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",

    # Image validation
    "Pillow>=10.0",

    # Excel
    "openpyxl>=3.1",

    # Scheduling
    "schedule>=1.2",

    # Utils
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
